--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       type="image/x-icon"
       href="assets/images/fav.png"
     />
-    <title>Invena Business Consulting HTML Template</title>
+    <title>Real Estate Developers Association of Nigeria</title>
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/fontawesome.css"
