--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Invena – A modern and responsive HTML template for consulting businesses. Perfect for finance, corporate, and agency websites. SEO-friendly, fast-loading, and easy to customize. Create a professional online presence today!">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
-    <title>Invena Business Consulting HTML Template</title>
+    <title>Real Estate Developers Association of Nigeria</title>
     <link rel="stylesheet preload" href="assets/css/plugins/fontawesome.css" as="style">
     <link rel="stylesheet preload" href="assets/css/plugins/swiper.css" as="style">
     <link rel="stylesheet preload" href="assets/css/plugins/metismenu.css" as="style">
@@ -95,7 +95,7 @@
                       <a href="about.html">About</a>
                       <a href="news-letter.html">News Letter</a>
                       <a href="#">Blog</a>
-                      <a href="#">Contact</a>
+                      <a href="contact.html">Contact</a>
                     </ul>
                   </div>
 
