--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                       <a href="about.html">About</a>
                       <a href="news-letter.html">News Letter</a>
                       <a href="#">Blog</a>
-                      <a href="#">Contact</a>
+                      <a href="contact.html">Contact</a>
                     </ul>
                   </div>
 
