--- a/contact.html
+++ b/contact.html
@@ -141,30 +141,30 @@
                 <div class="col-lg-4">
                     <div class="contact-info-area-wrapper-p">
                         <div class="single-contact-info">
-                            <div class="icon">
+                            <!-- <div class="icon">
                                 <i class="fa-solid fa-phone-flip"></i>
-                            </div>
+                            </div> -->
                             <div class="info-wrapper">
                                 <span>Call Us 24/7</span>
-                                <a href="#">(+256) 2145.2156</a>
+                                <a href="#">+234 803 314 2480</a>
                             </div>
                         </div>
                         <div class="single-contact-info">
-                            <div class="icon">
+                            <!-- <div class="icon">
                                 <i class="fa-solid fa-envelope"></i>
-                            </div>
+                            </div> -->
                             <div class="info-wrapper">
                                 <span>Work with us</span>
-                                <a href="#">info@Invena.com</a>
+                                <a href="#">redannigeria@yahoo.com</a>
                             </div>
                         </div>
                         <div class="single-contact-info">
-                            <div class="icon">
-                                <i class="fa-solid fa-location-dot"></i>
-                            </div>
+                            <!-- <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i> -->
+                            <!-- </div> -->
                             <div class="info-wrapper">
                                 <span>Our Location</span>
-                                <a href="#">125 Town, United State</a>
+                                <a href="#">No. 3 Aguleri Street, Off Gimbiya Street, Area 11, Garki, Abuja, Nigeria</a>
                             </div>
                         </div>
                     </div>
@@ -364,12 +364,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-8-wrapper">
-                            <p>Invena - Copyright
+                            <p>Copyright
                                 <script>
                                     document.write(
                                         new Date().getFullYear()
                                     )
-                                </script>. All rights reserved.
+                                </script> © REDAN. All Rights Reserved.
                             </p>
                             <ul>
                                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
