--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Invena – A modern and responsive HTML template for consulting businesses. Perfect for finance, corporate, and agency websites. SEO-friendly, fast-loading, and easy to customize. Create a professional online presence today!">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
-    <title>Invena Business Consulting HTML Template</title>
+      <title>Real Estate Developers Association of Nigeria</title>
     <link rel="stylesheet preload" href="assets/css/plugins/fontawesome.css" as="style">
     <link rel="stylesheet preload" href="assets/css/plugins/swiper.css" as="style">
     <link rel="stylesheet preload" href="assets/css/plugins/metismenu.css" as="style">
@@ -36,8 +36,8 @@
               <div class="header-top-one-wrapper">
                 <div class="left">
                   <div class="mail">
-                    <a href="mailto:webmaster@example.com"
-                      ><i class="fal fa-envelope"></i> support@invena.com</a
+                    <a href="redannigeria@yahoo.com"
+                      ><i class="fal fa-envelope"></i>redannigeria@yahoo.com</a
                     >
                   </div>
                   <div class="working-time">
@@ -280,8 +280,8 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footer-logo-area-left-8">
-                        <a href="#" class="logo">
-                            <img src="assets/images/logo/03.svg" alt="logo">
+                        <a href="#" class="footer_logo">
+                            REDAN
                         </a>
                         <p class="disc">
                             Felis consquat magnis fames sagittis ultrices plasodales porttitor quisque ultrice tempor
@@ -332,7 +332,7 @@
                                 </div>
                                 <div class="inner-content">
                                     <h5 class="title">Call Us 24/7</h5>
-                                    <a href="#">(+256) 2145.2156</a>
+                                    <a href="#">(+234) 803 314 2480</a>
                                 </div>
                             </div>
                             <div class="signle-footer-contact-8">
@@ -341,7 +341,7 @@
                                 </div>
                                 <div class="inner-content">
                                     <h5 class="title">Work with us</h5>
-                                    <a href="#">info@Invena.com</a>
+                                    <a href="#">redannigeria@yahoo.com</a>
                                 </div>
                             </div>
                             <div class="signle-footer-contact-8">
@@ -350,8 +350,7 @@
                                 </div>
                                 <div class="inner-content">
                                     <h5 class="title">Our Location</h5>
-                                    <a href="#">XYZ Hilton Street, 125 Town <br>
-                                        United State</a>
+                                    <a href="#">No. 3 Aguleri Street, Off Gimbiya Street, Area 11, Garki, Abuja, Nigeria</a>
                                 </div>
                             </div>
                         </div>
