--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               <div class="header-top-one-wrapper">
                 <div class="left">
                   <div class="mail">
-                    <a href="mailto:webmaster@example.com"
-                      ><i class="fal fa-envelope"></i> support@invena.com</a
+                    <a href="redannigeria@yahoo.com"
+                      ><i class="fal fa-envelope"></i>redannigeria@yahoo.com</a
                     >
                   </div>
                   <div class="working-time">
@@ -153,7 +153,7 @@
                   <div class="col-lg-12">
                     <div class="banner-inner-two-content">
                       <p class="pre-title">
-                        Welcome to the Real Estate Developers Association of Nigeria (REDAN)
+                        WELCOME TO REDAN FCT CHAPTER
 
                       </p>
                       <h1 class="title">
@@ -163,7 +163,7 @@
                        Driving sustainable growth and innovation across the real estate sector for a stronger nation.
                       </p>
                       <a href="#" class="rts-btn btn-primary btn-white"
-                        >Get Consultant</a
+                        >Explore</a
                       >
                     </div>
                   </div>
@@ -210,7 +210,7 @@
                   <div class="col-lg-12">
                     <div class="banner-inner-two-content">
                       <p class="pre-title">
-                        Welcome to the Real Estate Developers Association of Nigeria (REDAN)
+                        WELCOME TO REDAN FCT CHAPTER
                       </p>
                       <h1 class="title">
                         Setting the Benchmark for Quality Developments
@@ -219,7 +219,7 @@
                         Ensuring excellence and integrity in every project, fostering trust and lasting value for all Nigerians.
                       </p>
                       <a href="#" class="rts-btn btn-primary btn-white"
-                        >Get Consultant</a
+                        >Explore</a
                       >
                     </div>
                   </div>
@@ -266,7 +266,7 @@
                   <div class="col-lg-12">
                     <div class="banner-inner-two-content">
                       <p class="pre-title">
-                       Welcome to the Real Estate Developers Association of Nigeria (REDAN)
+                      WELCOME TO REDAN FCT CHAPTER
                       </p>
                       <h1 class="title">
                        Unlocking Prime Real Estate Investment Opportunities
@@ -275,7 +275,7 @@
                        Connecting investors with lucrative ventures that shape vibrant communities and economic prosperity.
                       </p>
                       <a href="#" class="rts-btn btn-primary btn-white"
-                        >Get Consultant</a
+                        >Explore</a
                       >
                     </div>
                   </div>
@@ -389,7 +389,7 @@
                   <div class="information">
                     <span>Call us anytime</span>
                     <a href="#">
-                      <h6 class="title">+256 56778.5678</h6>
+                      <h6 class="title">+234 803 314 2480</h6>
                     </a>
                   </div>
                 </div>
@@ -1404,7 +1404,7 @@
                         <div class="information-wrapper">
                           <span>Call Us 24/7</span>
                           <a href="#">
-                            <h6 class="title">(+256) 2145.2156</h6>
+                            <h6 class="title">(+234)803 314 2480</h6>
                           </a>
                         </div>
                       </div>
@@ -1415,7 +1415,7 @@
                         <div class="information-wrapper">
                           <span>Work with us</span>
                           <a href="#">
-                            <h6 class="title">info@invena.com</h6>
+                            <h6 class="title">info@redan.com</h6>
                           </a>
                         </div>
                       </div>
@@ -1426,7 +1426,7 @@
                         <div class="information-wrapper">
                           <span>Our Location</span>
                           <a href="#">
-                            <h6 class="title">125 TownUnited State</h6>
+                            <h6 class="title">Area 11, Garki, Abuja</h6>
                           </a>
                         </div>
                       </div>
@@ -1575,7 +1575,7 @@
             <div class="col-12">
               <div class="text-center">
                 <p>
-                  Invena - Copyright
+                  REDAN - Copyright
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
